Add basic grid layout for nav and header

--- a/index.html
+++ b/index.html
@@ -8,10 +8,36 @@
 </head>
 <body>
     <header>
-
+        <div class="headerTop">
+            <div class="magGlass"></div>
+            <div class="search"></div>
+            <div class="notification"></div>
+            <div class="profilePic"></div>
+            <div class="name"></div>
+        </div>
+        <div class="headerMain">
+            <div class="mainProPic"></div>
+            <div class="greeting"></div>
+            <div class="newBut"></div>
+            <div class="uploadBut"></div>
+            <div class="shareBut"></div>
+        </div>
     </header>
     <nav>
-
+        <div class="logo">LOGO Dashboard</div>
+        <ul class="menu">
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+        </ul>
+        <ul class="menu2">
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
     </nav>
     <div class="content">
 
