Add Icons and basic styling and positioning to navigation

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         </div>
     </header>
     <nav>
-        <div class="logo">LOGO Dashboard</div>
+        <div class="logo"><img class="dashIcon" src="icons/dashboard.svg"> Dashboard</div>
         <ul class="menu">
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
+            <li><img class="icon" src="icons/home.svg"><a href="#"> Home</a></li>
+            <li><img class="icon" src="icons/profile.svg">Profile</li>
+            <li><img class="icon" src="icons/message.svg"> Messages</li>
+            <li><img class="icon" src="icons/history.svg"> History</li>
+            <li><img class="icon" src="icons/task.svg"> Tasks</li>
+            <li><img class="icon" src="icons/communitites.svg"> Communities</li>
         </ul>
         <ul class="menu2">
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
+            <li><img class="icon" src="icons/setting.svg"> Settings</li>
+            <li><img class="icon" src="icons/support.svg"> Support</li>
+            <li><img class="icon" src="icons/privacy.svg"> Privacy</li>
         </ul>
     </nav>
     <div class="content">
