Finish both headers with styling and positioning. No background and colors yet.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,43 @@
 <body>
     <header>
         <div class="headerTop">
-            <div class="magGlass"></div>
-            <div class="search"></div>
-            <div class="notification"></div>
-            <div class="profilePic"></div>
-            <div class="name"></div>
+            <div class="magGlass">
+                <img class="searchIcon" src="icons/search.svg">                
+            </div>
+            <div class="search">
+                <input type="search" id="haha" name="haha">
+            </div>
+            <div class="notification">
+                <img src="icons/bell-badge.svg" class="bellIcon">
+            </div>
+            <div class="profilePic">
+                <img class="profPic" src="icons/profpic.png">
+            </div>
+            <div class="name">
+                Marko Dinka
+            </div>
         </div>
         <div class="headerMain">
-            <div class="mainProPic"></div>
-            <div class="greeting"></div>
-            <div class="newBut"></div>
-            <div class="uploadBut"></div>
-            <div class="shareBut"></div>
+            <div class="mainProPic">
+                <img src="icons/profpic.png" class="bigProfPic">
+            </div>
+            <div class="greeting">
+                <h5>Hi there,</h5>
+                <p class="bigName">Marko Dinka (@Reyful)</p>
+            </div>
+            <div class="newBut">
+                <button class="headerBut" type="button">New</button>
+            </div>
+            <div class="uploadBut">
+                <button class="headerBut" type="button">Upload</button>
+            </div>
+            <div class="shareBut">
+                <button class="headerBut" type="button">Share</button>
+            </div>
         </div>
     </header>
     <nav>
-        <div class="logo"><img class="dashIcon" src="icons/dashboard.svg"> Dashboard</div>
+        <div class="logo"><img class="dashIcon" src="icons/dashboard.svg"><p>Dashboard</p></div>
         <ul class="menu">
             <li><img class="icon" src="icons/home.svg"><a href="#"> Home</a></li>
             <li><img class="icon" src="icons/profile.svg">Profile</li>
