--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/icons/example-dark-theme-favico-6a6f6f67bc3e7.png">
     <title>Admin Dashboard</title>
 </head>
 
